# qui

./: .gitignore  Cargo.toml
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  redirect_uri.html  token.rs  ui.rs  utils.rs
src/cli/: channel.rs  clap.rs  clap_app.rs  handle.rs  notify.rs
src/cui/: ui.rs
src/utils/: event.rs
