[package]
name = "qui"
version = "0.1.0"
authors = ["Hosshii <sao_heath6147.wistre@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
termion = "1.5.6"
tui = "0.15.0"
rust_traq = { git = "https://github.com/hosshii/rust_traq.git", branch = "main" }
rand = "0.8.3"
webbrowser = "0.5.5"
tokio = { version = "0.2.2", features = ["full"] }
anyhow = "1.0.40"
futures = "0.3.15"
